<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">AnGram</string>
    <string name="lorem_ipsum" translatable="false" tools:keep="@string/lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae egestas odio. In dui tortor, lobortis vel commodo at, viverra eu neque. Suspendisse sodales congue fringilla. Praesent venenatis ante in eros sollicitudin, imperdiet vulputate velit finibus. Aenean viverra tempus nisl, et gravida quam pellentesque interdum. Aliquam non lacinia tortor. Etiam malesuada suscipit arcu ut fringilla. Vestibulum fringilla nulla ac varius ultricies. Quisque non tristique est. Morbi congue eleifend placerat.</string>

    <string name="share_to">Share to</string>
    <string name="loading">Loading</string>
    <string name="unknown_error">Unknown error</string>
    <string name="error_title">Error</string>
    <string name="next_button_text">Next</string>
    <string name="query_canceled">Query canceled</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="code_is_invalid">Code is invalid</string>
    <string name="too_many_requests_try_later">Too many requests. Try later.</string>
    <string name="connection_state">Connection state</string>

    <!--Authorization flow-->
    <string name="phone_number_invalid">Phone number invalid</string>
    <string name="enter_your_phone_number_title">Enter your phone number</string>
    <string name="phone_number_text_input_hint">Phone number</string>
    <string name="phone_number_cant_be_empty">Phone number can\'t be empty</string>
    <string name="invalid_phone_number_length">Invalid phone number length</string>
    <string name="enter_auth_code_title">Enter auth code</string>
    <string name="authentication_code_cant_be_empty">Authentication code can\'t be empty</string>
    <string name="authentication_code">Authentication code</string>
    <string name="enter_password">Enter password</string>
    <string name="password_type_input_hint">Password</string>
    <string name="resend_code_button_text">Resend code</string>
    <string name="preference_file_key" translatable="false">angram_shared_preference_file_key</string>
    <!--\\Authorization flow-->

    <!--Proxy-->
    <string name="add_proxy">Add proxy</string>
    <string name="server_add_mt_proto_proxy_label">Server</string>
    <string name="port_add_mt_proto_proxy_label">Port</string>
    <string name="connect_add_mt_proto_proxy_label">Connect</string>
    <string name="enter_proxy_server_data">Enter proxy server data</string>
    <string name="key_add_mtproto_proxy_label">Key</string>
    <string name="credentials_add_mtproto_proxy_label">Credentials</string>
    <string name="proxy_successfully_has_been_added">Proxy successfullty has been added</string>
    <string name="choose_proxy_server_type">Choose proxy server type</string>
    <string name="enabled_proxy_id" translatable="false">enabled_proxy_id</string>
    <!--\\Proxy-->

    <!--Chat list-->
    <string name="chat_list_action_bar_title">Chat list</string>
    <string name="private_chats_title">Private chats</string>
    <string name="basic_groups_title">Groups</string>
    <string name="supergroups_title">Supergroups</string>
    <string name="secret_chats_title">Secret chats</string>
    <string name="other_chats_title">Other chats</string>
    <!--\\Chat list-->

</resources>
