<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_private_chats"
        android:icon="@drawable/ic_private_chats_white"
        android:title="@string/private_chats_title" />
    <item
        android:id="@+id/action_basic_groups"
        android:icon="@drawable/ic_basic_groups_white"
        android:title="@string/basic_groups_title" />
    <item
        android:id="@+id/action_supergroups"
        android:icon="@drawable/ic_supergroups_white"
        android:title="@string/supergroups_title" />
    <item
        android:id="@+id/action_secret_chats"
        android:icon="@drawable/ic_secret_chats_black"
        android:title="@string/secret_chats" />
    <item
        android:id="@+id/action_other_chats"
        android:icon="@drawable/ic_more_horiz_white"
        android:title="@string/other_chats_title" />
</menu>